--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "engines": {
     "node": "8.9.1"
